--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
 
                 <div class="mapa-contenido">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1551.3228750873836!2d-68.06009107131666!3d-38.95492059809055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a33d2102b4183%3A0x72f6646bed947d0d!2sAvenida%20Argentina%2049%2C%20Neuqu%C3%A9n!5e0!3m2!1ses-419!2sar!4v1709333123596!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.663701225243!2d-68.06148542494448!3d-38.95451057171189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x960a33d2102b4183%3A0x72f6646bed947d0d!2sAvenida%20Argentina%2049%2C%20Neuqu%C3%A9n!5e0!3m2!1ses-419!2sar!4v1709336192468!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
 
